# parsers

./: .golangci.yml  README.md  go.mod  go.sum
.github/: dependabot.yml
.github/workflows/: golangci-lint.yml  test.yml
cargo/: README.md  cargo.go  cargo_test.go  cargo_unit_test.go  commands.go  conformance_test.go  errors.go  handler.go  helpers.go  models.go  modules.go
cargo/cargofakes/: fake_cargo_implementation.go
cargo/testdata/: data.json
composer/: commands.go  errors.go  handler.go  models.go  modules.go
gem/: handler.go  helper.go  service.go
go/: decoder.go  errors.go  handler.go  models.go
gradle/: commands.go  dependencies.go  dependencies_test.go  handler.go  project.go
helper/: commands.go  helper.go
internal/: tools.go
internal/helper/: commands.go  gateway.go  helper.go  helper_test.go
internal/license/: licenses.go
licenses/: licenses.go
maven/: decoder.go  errors.go  handler.go
meta/: package.go  package_test.go
npm/: converter.go  converter_test.go  handler.go  handler_test.go  model.go  models.go  reader.go  reader_test.go
npm/test/: npm-shrinkwrap.json  package-lock-v1.json
nuget/: errors.go  handler.go  helpers.go  models.go
pip/: handler.go
pip/pipenv/: handler.go
pip/poetry/: handler.go  poetry_unit_test.go
pip/poetry/testdata/: main.py  pyproject.toml
pip/pyenv/: commands.go  handler.go
pip/testdata/: requests_pypi_data.json
plugin/: plugin.go
pnpm/: handler.go  handler_test.go
reader/: reader.go
swift/: errors.go  handler.go  helpers.go  models.go
yarn/: handler.go  handler_test.go
(+9 files in other folders)
